// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";

service EmailAuth {
    rpc add_auth_method(add_auth_methodRequest) returns (add_auth_methodResponce) {}
    rpc remove_auth_method(remove_auth_methodRequest) returns (remove_auth_methodResponce) {}
    rpc check_password(check_passwordRequest) returns (check_passwordResponce) {}
}

message add_auth_methodResponce {
}
message check_passwordResponce {
    string status = 1;
}
message remove_auth_methodRequest {
    string email = 1;
}
message add_auth_methodRequest {
    string email = 1;
    int64 userId = 2;
    string password = 3;
}
message remove_auth_methodResponce {
}
message check_passwordRequest {
    string email = 1;
    string password = 2;
}



service SOTServer {
    rpc get_active_proto(get_active_protoRequest) returns (get_active_protoResponce) {}
}
message get_active_protoResponce {
    string proto = 1;
}
message get_active_protoRequest {
}